minor text update

--- a/LocalizationModel.ipynb
+++ b/LocalizationModel.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Deep Learning Vehicle Tracking \n",
+    "Deep Learning Vehicle Tracking: Starter code\n",
     "======\n",
     "\n",
-    "This is a demo on how to approach vehicle tracking with deep learing.\n",
+    "This demo shows how to approach Vehicle Tracking with deep learing.\n",
     "Using the data from udacitys \"Vehicle Detection and Tracking\" project. \n",
     "The images provided (car and non car) shoulb be placed in ./vehicles/ and ./non-vehicles/"
    ]
@@ -54,9 +54,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### After loading we do the usual pre-processing\n",
+    "### After loading I do the usual pre-processing\n",
     "\n",
-    "These are just simple sklearn steps. Note that there is no validation split. This is not quite textbook, but we have to validate that the model works well in localization independently anyway."
+    "I do not use a validation split, but I have to validate that the model works well in localization independently anyway."
    ]
   },
   {
@@ -95,7 +95,7 @@
    "source": [
     "### Define Keras model in Classification mode\n",
     "\n",
-    "This is straightforward model definition with the difference that we do not use any dense layers, but analogous Convolution2D layers. Also, since we do not have classes but -1 and 1 we use the mse metric for loss. Adding more than two classes is a bit more tricky because softmax needs normalization along the correct axis (see bottom)."
+    "In the model definition I do not use any dense layers, but analogous Convolution2D layers. Also, since I do not have classes, but -1 and 1, I use the mse metric for loss. Adding more than two classes is a bit more tricky because softmax needs normalization along the correct axis (see bottom)."
    ]
   },
   {
@@ -200,7 +200,7 @@
    "metadata": {},
    "source": [
     "# Turn the classifier into a heat map\n",
-    "Now this is the fun part: since the model is all Conv2d we do not actually specify image dimensions (although that is useful for training). And we do not add the flatten() layer in the end"
+    "Now this is the fun part: since the model is all Conv2d I do not actually specify image dimensions (although that is useful for training). And I do not add the flatten() layer in the end"
    ]
   },
   {
@@ -293,7 +293,7 @@
     "\n",
     "- Lower false positives further. As you can see from the heatmap parts of the tree are a bit dangerous you could consider grabbing a few patches there saving them and adding them to the non-vehicle data\n",
     "\n",
-    "- If you try to run this model on an car image that is way larger than 64x6x pixels you will get funny results. Therefore you will need scaling or region proposals to really catch all possible. But the good news is that a scaling factor of 2 is usually okay (as you can see the cars in the demo image are also to big but detected just fine.\n",
+    "- If you try to run this model on an car image that is way larger than 64x64 pixels you will get funny results. Therefore you will need scaling or region proposals to really catch all possible. But the good news is that a scaling factor of 2 is usually okay (as you can see the cars in the demo image are also to big but detected just fine.\n",
     "\n",
     "- Optimize for speed by only using sensible image areas sizes.\n",
     "\n",
@@ -341,7 +341,7 @@
     "\n",
     "### Contribute\n",
     "\n",
-    "If you have Ideas on how to improve and make this notebook more easy to understand feel free to send me a pull request. Also feel free to add features but keep in mind that this is by design a baseline version.\n",
+    "If you have Ideas on how to improve and make this notebook more easy to understand feel free to send me a pull request. Also feel free to add features!\n",
     "\n",
     "Henrik Tünnermann"
    ]
